# Knowledge_Worker

./: .gitignore  filelist.txt  main.py  pyproject.toml  requirements.txt
core/: database.py  views.py
core/adapters/: llm_connectors.py  orm.py  repository.py
core/domain/: commands.py  error_messages.py  model.py
core/entrypoints/: headless_cli.py
core/service_layer/: handlers.py  messagebus.py  unit_of_work.py
prompts/CanonicalEntityConsolidation/: output_schema.json  prompt_text.md  prompt_text_v2.md
prompts/DocumentAnalysis/: output_schema.json  prompt_text.md
src/: setup.py
src/core/: bootstrap.py  config.py  database.py  views.py
src/core/adapters/: llm_connectors.py  orm.py  repository.py
src/core/domain/: commands.py  events.py  model.py
src/core/entrypoints/: headless_cli.py
src/core/service_layer/: handlers.py  messagebus.py  unit_of_work.py
tests/unit/: test_handlers.py
web/: dependenicies.py  main.py
web/routers/: documents.py  entities.py  graphs.py  stakeholders.py  topics.py
web/static/: govuk-frontend-5.7.1.min.css
web/templates/: graph.html  index.html
web/templates/components/: delete_confirmation.html  delete_modal.html  dialog.html  document_entity_options.html  document_list.html  document_row.html  document_row_edit.html  documents_tab.html  entities_tab.html  entity_list.html  entity_row.html  entity_row_edit.html  error_message.html  modal.html  stakeholder_list.html  stakeholder_row.html  stakeholder_row_edit.html  stakeholders_tab.html  tab_box.html  topic_list.html  topic_row.html
(+1 files in other folders)
