[project]
name = "knowledge-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aider-chat",
    "aider-install>=0.1.3",
    "annotated-types==0.7.0",
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "docx2python==3.3.0",
    "executing==2.1.0",
    "fastapi>=0.115.6",
    "greenlet==3.1.1",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "jedi==0.19.2",
    "jinja2>=3.1.5",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "lxml==5.3.0",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "packaging==24.2",
    "paragraphs==1.0.1",
    "parso==0.8.4",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.1",
    "pure-eval==0.2.3",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pygments==2.18.0",
    "pypdf>=5.1.0",
    "pytest>=8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pywin32==308",
    "pyzmq==26.2.0",
    "requests>=2.32.3",
    "setuptools>=75.7.0",
    "six==1.17.0",
    "sqlalchemy==2.0.36",
    "stack-data==0.6.3",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "uvicorn>=0.34.0",
    "wcwidth==0.2.13",
]
